--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
     "serve-static": "^1.15.0",
